[tool.poetry]
name = "nonebot_plugin_handle"
version = "0.3.4"
description = "Nonebot2 汉字Wordle 插件"
authors = ["meetwq <meetwq@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/noneplugin/nonebot-plugin-handle"
repository = "https://github.com/noneplugin/nonebot-plugin-handle"

[tool.poetry.dependencies]
python = "^3.8"
nonebot2 = { version = "^2.0.1", extras = ["fastapi"] }
nonebot-plugin-send-anything-anywhere = "^0.3.0"
nonebot-plugin-session = "^0.2.0"
Pillow = ">=9.0.0,<11.0.0"
pypinyin = ">=0.40.0,<1.0.0"

[tool.poetry.group.dev.dependencies]
black = "^22.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
